fix: blurry h1,h2,h3 fonts

--- a/src/style.scss
+++ b/src/style.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Nunito&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Nunito&display=swap");
 
 $gutter: 10px;
 
@@ -80,6 +80,12 @@ h2,
 h3 {
     margin-bottom: 0.4em;
     margin-top: 1em;
+}
+
+h1,
+h2,
+h3 {
+    font-weight: normal;
 }
 
 p {
